--- a/_config.yml
+++ b/_config.yml
@@ -65,13 +65,13 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 # Social integration
 # -----------------------------------------------------------------------------
 
-github_username: tsagkas # your GitHub user name
+github_username: # your GitHub user name
 gitlab_username: # your GitLab user name
-x_username: NikolasTsagkas  # your X handle
+x_username:  # your X handle
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
-linkedin_username: nikolas-tsagkas # your LinkedIn user name
+linkedin_username: # your LinkedIn user name
 telegram_username: # your Telegram user name
-scholar_userid: cZgkD_oAAAAJ # your Google Scholar ID
+scholar_userid: # your Google Scholar ID
 semanticscholar_id: # your Semantic Scholar ID
 whatsapp_number: # your WhatsApp number (full phone number in international format. Omit any zeroes, brackets, or dashes when adding the phone number in international format.)
 orcid_id: # your ORCID ID
@@ -102,7 +102,6 @@ zotero_username: # your zotero username
 wechat_qr: # filename of your wechat qr-code saved as an image (e.g., wechat-qr.png if saved to assets/img/wechat-qr.png)
 
 contact_note: >
-  Feel free to reach out by email or on social media.
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
